<resources>
    <string name="app_name">FoodProject</string>
    <string-array name="title">
        <item>Half Life</item>
        <item>Pac Man</item>
    </string-array>
    <string-array name="description">
        <item>First person shooter</item>
        <item>Cool game, pac man eats things</item>
    </string-array>
    <string-array name="foodTitle">
        <item>Fries</item>
        <item>Salad</item>
    </string-array>
    <integer-array name="foodRank">
        <item>2</item>
        <item>4</item>
    </integer-array>
    <string-array name="songTitle">
        <item>Sound of Silence</item>
        <item>Jingle Bells</item>
    </string-array>
    <integer-array name="songRating">
        <item>4</item>
        <item>5</item>
    </integer-array>


    <string name="test_post_poster_name">Jamila Ipyana</string>
    <string name="test_post_food_name">Avocado Toast with Egg</string>
    <string name="test_post_restaurant_name">Wasatch Grind and Pulp</string>
    <string name="at">at </string>
    <string name="poster_profile_pic">poster profile pic</string>

    <string name="filler"> </string>
    <string name="find_food_title">Find Food</string>
    <string name="share_food_title">Share Food</string>
    <string name="add_photo">Add Photo</string>
    <string name="take_photo">Take Photo</string>
</resources>
