<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/posterPic"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="1"
            android:contentDescription="@string/poster_profile_pic"
            app:srcCompat="@drawable/default_profile_picture" />

        <TextView
            android:id="@+id/posterName"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/test_post_poster_name"
            android:textColorLink="@color/colorAccent"
            android:textSize="@dimen/post_username_font_size"
            android:textStyle="normal" />
    </LinearLayout>

    <ImageView
        android:id="@+id/foodImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/poster_profile_pic"
        app:srcCompat="@drawable/ic_launcher_background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RatingBar
            android:id="@+id/postRating"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:numStars="5"
            android:stepSize=".1" />

        <TextView
            android:id="@+id/foodName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/test_post_food_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/at"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/test_post_restaurant_name"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/post_font_size" />
    </LinearLayout>
</LinearLayout>